# CHOP-Gen-App

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
public/documents/: inventoryForRequestToCard.docx  requestFromOrganization.docx  requestToCard.docx  requestToEmployee.docx  requestToFire.docx  ~$явление на выдачу личной карточки.doc
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AddObject.tsx  AddOrganization.tsx  FilePreviewModal.tsx  Header.tsx  Loader.tsx  Modal.tsx  ObjectDetailsForm.tsx  Table.tsx
src/components/ui/: BearIcon.tsx  Button.tsx  Icon.tsx  List.tsx  NumberSetting.tsx  PersonCard.tsx  Select.tsx
src/constants/: texts.ts
src/entity/documents/: documentService.ts  useCommonDocsStore.ts
src/entity/objects/: objectTypes.ts  useObjectsStore.ts
src/entity/organisation/: OrganisationService.ts  organisationTypes.ts  useOrganisationStore.tsx
src/entity/people/: peopleService.ts  peopleTypes.ts  useDictionaryPeople.ts  usePeopleStore.ts
src/entity/settings/: useLastDirStore.ts
src/sections/: Employees.tsx  SupervisoryCase.tsx
src/utils/: checkForUpdate.ts  dateUtils.ts  filterUtils.ts  general.ts  generateDocx.ts  pluralize.ts  saveLocation.ts  supervisoryFiles.ts  useHideScrollbar.ts
